# study

./: README.md  cloud-resource-ai-tree.txt  lambdaexit.md  localization-chinese.json  req.md
ECSNLB/: structure.md  taskdefinitionsample.json
assest_bot/: .env.example  .gitignore  README.md  demo.html  flow.md  pyproject.toml  requirement.md  requirements.txt
assest_bot/api/: __init__.py  main.py
assest_bot/docs/: API_GATEWAY_SETTINGS.md  DEPLOYMENT.md  LAMBDA_ENV_VARS.md  flow.md  flow.puml  flow_activity.puml  flow_component.puml  infra_architecture.mmd  infra_architecture.puml  infra_design.md
assest_bot/schema/: query_spec_v1.json  resource_tables.json
assest_bot/src/: __init__.py
assest_bot/src/executor/: __init__.py  db_client.py  handler.py  spec_to_sql.py
assest_bot/src/formatter/: __init__.py  formatter.py
assest_bot/src/orchestrator/: __init__.py  handler.py  llm_client.py  prompts.py  query_spec.py
assest_bot/src/shared/: __init__.py  config.py  models.py
assest_bot/tests/: test_query_spec.py  test_spec_to_sql.py
cloud-resource-ai/: ARCHITECTURE.md  README.md  copilot.md  file_structure.md
cloud-resource-ai/.github/: copilot-instructions.md
cloud-resource-ai/governance/: access-control-model.md  audit-logging.md  cost-control.md  data-classification.md
cloud-resource-ai/session/: ttl-policy.md  (+3 more)
ecs_safe_scaleIn/: README.md  main.tf  providers.tf  terraform.tfvars.example  variables.tf
tertiary_vault_ecs/: main.tf  read.me  terraform.tfvars
tertiary_vault_lambda/: backend.tf  db_backup.py  main.tf  terraform.tfvars  variables.tf
(+166 files in other folders)
